re PR tree-optimization/22000 (Read from volatile member of struct is optimized away)

PR 22000
	* tree-ssa-operands.c (get_expr_operands): Check the volatility of
	the FIELD_DECL and set s_ann->has_volatile_ops accordingly.

From-SVN: r101275